[gd_scene load_steps=2 format=3 uid="uid://c77r4qmw3a416"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/editor/graph.gd" id="1_7isyk"]

[node name="Graph" type="GraphEdit"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
right_disconnects = true
connection_lines_thickness = 4.0
zoom_min = 0.5
zoom_max = 2.0
script = ExtResource("1_7isyk")

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 6
item_0/text = "StartNode"
item_0/id = 0
item_1/text = "DialogueNode"
item_1/id = 1
item_2/text = "CommentNode"
item_2/id = 2
item_3/text = "SignalNode"
item_3/id = 3
item_4/text = "SetNode"
item_4/id = 4
item_5/text = "ConditionNode"
item_5/id = 5

[connection signal="connection_request" from="." to="." method="_on_connection_request"]
[connection signal="connection_to_empty" from="." to="." method="_on_connection_to_empty"]
[connection signal="delete_nodes_request" from="." to="." method="_on_delete_nodes_request"]
[connection signal="disconnection_request" from="." to="." method="_on_disconnection_request"]
[connection signal="duplicate_nodes_request" from="." to="." method="_on_duplicate_nodes_request"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="popup_request" from="." to="." method="show_add_menu"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_add_menu_pressed"]
